{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 30,
  "lineage": "f1e5c7e3-f022-0580-2d90-d754178825cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f33befc90bf2f4c9",
            "association_id": "eipassoc-02194b6f0a2315448",
            "domain": "vpc",
            "id": "eipalloc-0f33befc90bf2f4c9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06dfa19cb603ed598",
            "private_dns": "ip-10-0-101-10.ec2.internal",
            "private_ip": "10.0.101.10",
            "public_dns": "ec2-23-23-100-105.compute-1.amazonaws.com",
            "public_ip": "23.23.100.105",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753805730144:internet-gateway/igw-02b93dc27002874ec",
            "id": "igw-02b93dc27002874ec",
            "owner_id": "753805730144",
            "tags": {
              "Name": "my-internet-gateway-01"
            },
            "tags_all": {
              "Name": "my-internet-gateway-01"
            },
            "vpc_id": "vpc-01a98bc3b3b8d8d4c"
          },
          "dependencies": [
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my-nat-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f33befc90bf2f4c9",
            "association_id": "eipassoc-02194b6f0a2315448",
            "connectivity_type": "public",
            "id": "nat-041f58b23c630ec49",
            "network_interface_id": "eni-06dfa19cb603ed598",
            "private_ip": "10.0.101.10",
            "public_ip": "23.23.100.105",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-002007c1a72ff3bd8",
            "tags": {
              "Name": "my-nat-01"
            },
            "tags_all": {
              "Name": "my-nat-01"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-nat",
            "aws_internet_gateway.my-igw",
            "aws_subnet.my-public-subnet-01",
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-private-route-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753805730144:route-table/rtb-0690e2e270d61f937",
            "id": "rtb-0690e2e270d61f937",
            "owner_id": "753805730144",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-041f58b23c630ec49",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "my-private-route-01"
            },
            "tags_all": {
              "Name": "my-private-route-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a98bc3b3b8d8d4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.my-nat-01",
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-public-route-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753805730144:route-table/rtb-06194281378b1230c",
            "id": "rtb-06194281378b1230c",
            "owner_id": "753805730144",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b93dc27002874ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-route-01"
            },
            "tags_all": {
              "Name": "my-public-route-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a98bc3b3b8d8d4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-private-root",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0486fa1ec866ce761",
            "route_table_id": "rtb-0690e2e270d61f937",
            "subnet_id": "subnet-0374b874104fc6b27"
          },
          "dependencies": [
            "aws_eip.elastic-ip-nat",
            "aws_internet_gateway.my-igw",
            "aws_nat_gateway.my-nat-01",
            "aws_route_table.my-private-route-01",
            "aws_subnet.my-private-subnet-01",
            "aws_subnet.my-public-subnet-01",
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-public-root",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e31660f6f932dd8b",
            "route_table_id": "rtb-06194281378b1230c",
            "subnet_id": "subnet-002007c1a72ff3bd8"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.my-public-route-01",
            "aws_subnet.my-public-subnet-01",
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753805730144:subnet/subnet-0374b874104fc6b27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0374b874104fc6b27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "753805730144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-private-subnet-01"
            },
            "tags_all": {
              "Name": "my-private-subnet-01"
            },
            "vpc_id": "vpc-01a98bc3b3b8d8d4c"
          },
          "dependencies": [
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753805730144:subnet/subnet-002007c1a72ff3bd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002007c1a72ff3bd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "753805730144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-public-subnet-01"
            },
            "tags_all": {
              "Name": "my-public-subnet-01"
            },
            "vpc_id": "vpc-01a98bc3b3b8d8d4c"
          },
          "dependencies": [
            "aws_vpc.my-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753805730144:vpc/vpc-01a98bc3b3b8d8d4c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0550131afd621535d",
            "default_route_table_id": "rtb-090127d387a714970",
            "default_security_group_id": "sg-0c6ea43c2df7d79a7",
            "dhcp_options_id": "dopt-09e11acd21f0c2632",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a98bc3b3b8d8d4c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090127d387a714970",
            "owner_id": "753805730144",
            "tags": {
              "Name": "my-vpc-01"
            },
            "tags_all": {
              "Name": "my-vpc-01"
            }
          }
        }
      ]
    }
  ]
}